Fix for squished DoseSpot iframe bug

--- a/examples/medplum-provider/src/pages/patient/PatientPage.module.css
+++ b/examples/medplum-provider/src/pages/patient/PatientPage.module.css
@@ -26,6 +26,8 @@
 }
 
 .contentBody {
+  display: flex;
+  flex-direction: column;
   flex: 1;
   min-height: 0;
   overflow: auto;
